--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,10 +37,11 @@ dependencies:
   flutter_sequence_animation:
   provider: ^6.0.2
   flutter_svg: ^1.0.3
-  firebase_core: ^1.13.1
-  cloud_firestore: ^3.1.10
-  firebase_auth: ^3.3.11
+  firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.15
+  firebase_auth: ^3.3.18
   fluttertoast: ^8.0.9
+  youtube_player_iframe: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
